# zk-rust-api

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  clippy.toml  deny.toml  rustfmt.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
benches/: zk_benchmarks.rs
docs/: API.md  ARCHITECTURE.md
examples/: basic_usage.rs
src/: main.rs
src/controllers/: health_controller.rs  merkle_tree_controller.rs  mod.rs  tree_controller.rs  zk_controller.rs
src/services/: health_service.rs  merkle_circuit.rs  merkle_tree.rs  merkle_tree_service.rs  mod.rs  tree_service.rs  zk_service.rs
web-client/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
web-client/http-client/: environment.http  health.http  merkle-tree.http  zk.http
web-client/src/: App.tsx  index.css
web-client/src/components/: TreeVisualization.tsx
web-client/src/lib/: api.ts
web-client/src/types/: tree.ts
